Unuse deprecated `new URL(String)`